--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,3 +2,9 @@ ja:
   time:
     formats:
       default: "%Y/%m/%d %H:%M:%S"
+  enums:
+    post:
+      post_status:
+        publish: "公開"
+        unpublish: "非公開"
+        draft: "下書き"
